Update configuration for Netlify deployment and remove Vercel-specific files

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,10 @@
-REACT_APP_API_URL=https://your-backend-service.onrender.com
-NODE_ENV=production 
+# API Configuration
+REACT_APP_API_URL=https://gdg-ai-teacher-assistant.onrender.com
+REACT_APP_FORCE_DEMO_MODE=true
+NODE_ENV=production
+
+# Google Gemini API (if needed)
+REACT_APP_GEMINI_API_KEY=AIzaSyDIc2q22ggyfIJzKSLxE_vTncScd0y1rdc
+
+# reCAPTCHA (if needed)
+REACT_APP_RECAPTCHA_SITE_KEY=6Lf6y_8qAAAAAC52uGjgRRWtcZ6ndIFP_qcZuZt3 
