Fix white screen issue: Add error handling, update Netlify config, and improve routing

--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,26 @@ node_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build files
+/build
+/dist
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # dataconnect generated files
 .dataconnect
