--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # API Configuration
-REACT_APP_API_URL=https://gdg-ai-teacher-assistant.onrender.com
-REACT_APP_FORCE_DEMO_MODE=true
-NODE_ENV=production
+REACT_APP_API_URL=http://localhost:3000
+REACT_APP_FORCE_DEMO_MODE=false
+NODE_ENV=development
 
 # Google Gemini API (Required)
 REACT_APP_GEMINI_API_KEY=your_gemini_api_key_here
