--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,35 @@
 [build]
-  command = "npm run build"
+  command = "CI= npm run build"
   publish = "build"
+
+[build.environment]
+  REACT_APP_FORCE_DEMO_MODE = "true"
+  NODE_ENV = "production"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
 
 [[headers]]
   for = "/static/*"
-  [headers.values]
+    [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.js"
-  [headers.values]
+    [headers.values]
     Content-Type = "application/javascript"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.css"
-  [headers.values]
-    Content-Type = "text/css" 
+    [headers.values]
+    Content-Type = "text/css"
+    Cache-Control = "public, max-age=31536000, immutable" 
