--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/pickers": "^3.3.11",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "axios": "^1.4.0",
     "chart.js": "^4.4.8",
@@ -26,9 +23,9 @@
     "dotenv": "^16.3.1",
     "katex": "^0.16.21",
     "mathjax-react": "^2.0.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.13.0",
@@ -37,9 +34,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.1"
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   },
   "eslintConfig": {
     "extends": [
